# zcw-rag-ai-blog-website

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json  teammate.md  基于混合渲染与PgVector向量检索的智能内容服务平台 - 企业级开发文档.md
.claude/: settings.json  settings.local.json
.playwright-mcp/: page-2026-05-04T11-02-02-754Z.yml  page-2026-05-04T11-02-35-408Z.yml  page-2026-05-04T11-02-52-665Z.yml  (+2 more)
backend/: .coverage  .dockerignore  .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260504_000001_init_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/dependencies/: auth.py
backend/app/middleware/: cors.py  exception.py  rate_limit.py
backend/app/models/: __init__.py  admin.py  article.py  article_tag.py  category.py  comment.py  monitor_log.py  tag.py  vector_chunk.py
backend/app/routers/: admin.py  monitor.py  public.py  rag.py
backend/app/schemas/: article.py  auth.py  category.py  comment.py  dashboard.py  monitor.py  rag.py  tag.py
backend/app/services/: article.py  auth.py  category.py  comment.py  dashboard.py  monitor.py  tag.py
backend/app/services/rag/: cleaner.py  embedder.py  generator.py  retriever.py  splitter.py  sync.py
backend/app/utils/: response.py
backend/scripts/: rebuild_vectors.py  seed_db.py
backend/tests/: conftest.py  test_api_auth.py  test_cleaner_edge_cases.py  test_rag_cleaner.py  test_rag_splitter.py  test_search_semantic.py  test_security.py  test_services.py
(+122 files in other folders)
